// ============================================================================
//  ISP_followed.cpp  —  Interface Segregation Principle ka SAHI tareeka
// ----------------------------------------------------------------------------
//  Fix: ek moti interface ki jagah role-specific chhote interfaces:
//    Two_Dimensional_Shape  -> sirf area()
//    Three_Dimensional_Shape-> area() + volume()
//  Square/Rectangle 2D wala implement karte (volume ka jhootha promise nahi),
//  Cube 3D wala. Ab koi class unwanted method implement nahi karti. ISP + LSP
//  dono saaf rehte hain.
// ============================================================================
#include <iostream>

using namespace std;

// Separate interface for 2D shapes
class Two_Dimensional_Shape
{
public:
    virtual double area() = 0;
};

// Separate interface for 3D shapes
class Three_Dimensional_Shape
{
public:
    virtual double area() = 0;
    virtual double volume() = 0;
};

// Square implements only the 2D interface
class Square : public Two_Dimensional_Shape
{
private:
    double side;

public:
    Square(double s) : side(s) {}

    double area() override
    {
        return side * side;
    }
};

// Rectangle implements only the 2D interface
class Rectangle : public Two_Dimensional_Shape
{
private:
    double length, width;

public:
    Rectangle(double l, double w) : length(l), width(w) {}

    double area() override
    {
        return length * width;
    }
};

// Cube implements the 3D interface
class Cube : public Three_Dimensional_Shape
{
private:
    double side;

public:
    Cube(double s) : side(s) {}

    double area() override
    {
        return 6 * side * side;
    }

    double volume() override
    {
        return side * side * side;
    }
};

int main()
{
    Two_Dimensional_Shape *square = new Square(5);
    Two_Dimensional_Shape *rectangle = new Rectangle(4, 6);
    Three_Dimensional_Shape *cube = new Cube(3);

    cout << "Square Area: " << square->area() << endl;
    cout << "Rectangle Area: " << rectangle->area() << endl;
    cout << "Cube Area: " << cube->area() << endl;
    cout << "Cube Volume: " << cube->volume() << endl;

    return 0;
}
